fix window overflow style

--- a/modules/window/style.less
+++ b/modules/window/style.less
@@ -79,6 +79,7 @@
     }
 }
 .win-body {
+    overflow-y: auto;
     padding: 20px;
     -webkit-overflow-scrolling:touch;
     background-color: @background_color_1;
